--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#contact">Contact and Contribute</a></li>
             </ul>
 
-            <h2 id="nav-options">Options </h2>
+            <h2 id="nav-options">Options</h2>
             <section id="options">
                 <div class="wtf">
                     <div id="placeholder">Hover over an option to see its description here</div>
@@ -214,6 +214,17 @@
                         <input type="text" value="[submodule] " id="submodule-text" />
                         <label for="submodule-text">Submodule Text</label>
                     </div>
+                </div>
+
+                <div class="group presets">
+                    <label for="presets">Presets</label>
+                    <select id="presets">
+                        <option value="#git=1&color-git=3&git-prefix=1&color-git-prefix=3&git-ahead=1&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&git-revno=1&color-git-revno=3&git-bisect=1&color-git-bisect=5&option-submodule=1&color-option-submodule=5&git-ontag=1&color-git-ontag=3&hg=1&color-hg=5&hg-prefix=1&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&hg-revno=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=3&hg-patches=1&color-hg-patches=3&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">Zen Pizza (Make Me One With Everything)</option>
+                        <option value="#git=1&color-git=3&color-git-prefix=3&git-ahead=1&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&color-git-revno=3&git-bisect=1&color-git-bisect=3b&option-submodule=1&color-option-submodule=3b&git-ontag=1&color-git-ontag=3b&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=5b&hg-patches=1&color-hg-patches=5b&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%9C%8E&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=%CF%9F&submodule-text=%5Bsubmodule%5D%20">Andrew Ray's</option>
+                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&color-git-conflicted=1&color-git-revno=3&color-git-bisect=5&color-option-submodule=5&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&color-hg-conflicted=1&color-hg-revno=5&color-hg-bisect=3&color-hg-patches=3&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&color-svn-revno=6&no-colors=1&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">Pretty Simple</option>
+                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&git-ahead=1&color-git-ahead=3b&git-modified=1&color-git-modified=3b&git-conflicted=1&color-git-conflicted=1&color-git-revno=3b&git-bisect=1&color-git-bisect=3b&option-submodule=1&color-option-submodule=3b&git-ontag=1&color-git-ontag=3&hg=1&color-hg=3&color-hg-prefix=3b&hg-modified=1&color-hg-modified=3b&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=3b&hg-bisect=1&color-hg-bisect=3b&hg-patches=1&color-hg-patches=3b&svn=1&color-svn=3&svn-modified=1&color-svn-modified=3b&svn-revno=1&color-svn-revno=3b&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3b&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=3b&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">One Color Sexmachine</option>
+                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&color-git-revno=3&git-bisect=1&color-git-bisect=2&option-submodule=1&color-option-submodule=2&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=2&hg-patches=1&color-hg-patches=2&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%9C%8E&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch&color-option-nobranch=1&bisecting-text=%E2%9C%84&submodule-text=submodule%20">The Pragmatic BashMaster</option>
+                    </select>
                 </div>
             </section>
             <div class="form-buttons" id="config-buttons">
